kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: ghcr.io/daedaluz/mosquitto-k8s:v2.1.2
          ports:
            - name: mqtt
              containerPort: 1883
            - name: websockets
              containerPort: 9001
          volumeMounts:
            - name: mosquitto-config
              mountPath: /etc/mosquitto/mosquitto.conf
              subPath: mosquitto.conf
              readOnly: true
            - name: mosquitto-data
              mountPath: /var/lib/mosquitto
            - name: mosquitto-passwd
              mountPath: /etc/mosquitto/passwd
              subPath: passwd
              readOnly: true
          readinessProbe:
            tcpSocket:
              port: mqtt
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: mqtt
            initialDelaySeconds: 15
            periodSeconds: 120

      volumes:
        - name: mosquitto-config
          configMap:
            name: mosquitto-config
        - name: mosquitto-data
          persistentVolumeClaim:
            claimName: mosquitto-data
        - name: mosquitto-passwd
          secret:
            secretName: mosquitto-passwd
