kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  type: LoadBalancer
  selector:
    app: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
    - name: websockets
      port: 9001
      targetPort: websockets
